# server-profiler

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  QUICKSTART.md  README.md  config.yaml  examples.py  main.py  profiler.py  pyproject.toml  requirements.txt  server_profiler.py  setup.sh  ssh_connector.py  terraform_generator.py
tests/: conftest.py  test_profiler.py  test_server_profiler.py  test_ssh_connector.py  test_terraform_generator.py
